--- a/www/css/drupalgap.css
+++ b/www/css/drupalgap.css
@@ -128,3 +128,10 @@ div[data-role="header"] div[data-role="controlgroup"] .ui-controlgroup-controls 
 div[data-role="footer"] a.ui-btn.ui-btn-icon-notext {
     margin-top: 0.1em;
 }
+
+/**
+* eigenes CSS
+*/
+.awri-comments>li p {
+	white-space: normal;
+}
